# Cryptobacktest-learn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  backtest_engine.py  bt.cmd  cli.py  config.py  data_fetch.py  ema_adx_strategy.py  experiment_tracker.py  list-strategies.cmd  pyproject.toml  report_utils.py  requirements-dev.txt  requirements.txt  rsi_strategy.py  run_backtest.py  start.cmd  strategy_registry.py  supertrend_strategy.py  test.cmd
.github/workflows/: ci.yml
docs/: backtest_assumptions.md  dependency_upgrade_checklist.md
experiments/: optimization_low_drawdown_split.csv  optimization_low_drawdown_split.json  runs.jsonl
experiments/20260409_024530_low_drawdown_trend/: config.json  equity.csv
experiments/20260409_030634_low_drawdown_trend/: stats.json  trades.csv
experiments/20260409_030746_rsi/: config.json  equity.csv  stats.json  trades.csv
strategies/: __init__.py  dca_rsi_strategy.py  dca_strategy.py  donchian_trend_long_strategy.py  ema_adx_strategy.py  intraday-seasonality-in-bitcoin.py  intraday_seasonality_btc_strategy.py  low_drawdown_trend_strategy.py  rebalancing-premium-in-cryptocurrencies.py  rsi_strategy.py  supertrend_strategy.py
tests/: test_data_contract.py  test_params_validation.py  test_strategy_registry.py  test_strategy_smoke.py
tools/: optimize_low_drawdown.py  rebalancing_premium_backtest.py  run_intraday_05_12.py  run_intraday_22_04.py  run_intraday_compare.py  run_intraday_hour_compare.py  run_intraday_one_year.py
