[project]
name = "crypto-futures-strategy-lab"
version = "0.0.0"
description = "Cryptocurrency futures strategy research and backtesting"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".venv",
    "data",
    "experiments",
    "strategies/intraday-seasonality-in-bitcoin.py",
    "strategies/rebalancing-premium-in-cryptocurrencies.py",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Scripts tweak sys.path before project imports
"tools/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["strategies"]
